<resources>
    <string name="app_name">HANDY bb</string>
    <string name="crash_toast_text">Crash app</string>
    <string name="accepted">Accepted</string>
    <string name="activate_api_option">Activate API Option</string>
    <string name="add">Add</string>
    <string name="add_client">Add Client</string>
    <string name="add_group">Add Group</string>
    <string name="add_groups">Add Groups</string>
    <string name="add_modifier">Add Modifier</string>
    <string name="add_new_client">Add New Client</string>
    <string name="add_notes_input">Add Notes Input</string>
    <string name="admin_email_is_not_well_formed">Admin Email is not well formed</string>
    <string name="addNewUser">New User</string>
    <string name="address">Address</string>
    <string name="administrator">Administrator</string>
    <string name="administrator_">Administrator:</string>
    <string name="admin_email">Admin E-Mail</string>
    <string name="admin_registration">Admin Registration</string>
    <string name="adults">Adults</string>
    <string name="_adults">%1d Adults</string>
    <string name="adults_children_disabled">%d Adults / %d Children / %d Disabled</string>
    <string name="all_sessions">All Sessions</string>
    <string name="already_gratis">Already Gratis</string>
    <string name="already_homage">Already homage</string>
    <string name="alternative_payment">Alternative Payment</string>
    <string name="amount">Amount</string>
    <string name="amount_cant_be_greater_than_cost">Amount can\'t be grater than cost</string>
    <string name="annually">Annually</string>
    <string name="applications">Applications</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="assumed_profit">Assumed Profit</string>
    <string name="at_least_one_of_name_surname_or_email_must_be_present">At least one of Name, Surname or Email must be present</string>
    <string name="bank_card">Bank Card</string>
    <string name="basics" translatable="false">Basics</string>
    <string name="black_box" translatable="false">Black Box</string>
    <string name="blackbox" translatable="false">BlackBox</string>
    <string name="business_email">Business E-Mail</string>
    <string name="business_name">Business Name</string>
    <string name="buttonColor">Button Color</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_delete">Cancel Delete</string>
    <string name="cancel_element">Cancel Element</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="cant_connect_printer">Can\'t connect printer</string>
    <string name="cant_define_payment_type_please_ask_t">Can\'t define payment type, please ask T.</string>
    <string name="cant_reprint_this_bill">Can\'t reprint this bill, try from order</string>
    <string name="cant_update_license_code">Can\'t Update License Code</string>
    <string name="capacity">Capacity</string>
    <string name="capacity_cant_be_0">Capacity can\'t be 0</string>
    <string name="card_accepted">Card Accepted?</string>
    <string name="cash">Cash</string>
    <string name="cash_drawer">Cash Drawer</string>
    <string name="category">Category</string>
    <string name="category_has_not_been_created_yet">Category has not been created yet</string>
    <string name="cem">CEM</string>
    <string name="change">Change</string>
    <string name="change_modifiers">Change Modifiers</string>
    <string name="checkBox_cashier">Select User As Cashier</string>
    <string name="checkBox_manager">Select User As Manager</string>
    <string name="children">Children</string>
    <string name="city">City</string>
    <string name="client">Client</string>
    <string name="client_already_present">Client Already Present</string>
    <string name="client_credit">Client Credit</string>
    <string name="client_type">Client Type</string>
    <string name="client_updated">Client Updated</string>
    <string name="clients">Clients</string>
    <string name="clients_arrived">Clients Arrived</string>
    <string name="clients_didnt_arrived">Clients Didn\'t Arrived</string>
    <string name="client_has_no_company">Client has no company</string>
    <string name="client_has_no_email">Client has no E-Mail</string>
    <string name="closing_tax">Closing Tax</string>
    <string name="color_palette_1"># 01 / Color Palette</string>
    <string name="color_palette_2"># 02 / Color Palette</string>
    <string name="color_palette_3"># 03 / Color Palette</string>
    <string name="color_palette_4"># 04 / Color Palette</string>
    <string name="color_palette_5"># 05 / Color Palette</string>
    <string name="color_palette_6"># 06 / Color Palette</string>
    <string name="color_palette_7"># 07 / Color Palette</string>
    <string name="color_palette_8"># 08 / Color Palette</string>
    <string name="color_set">Color set</string>
    <string name="combo" translatable="false">Combo</string>
    <string name="company_info">Company Info</string>
    <string name="company_name">Company Name</string>
    <string name="company_name_or_fiscal_code_must_be_present">Company Name or Fiscal Code must be present</string>
    <string name="configure">Configure</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="cost">Cost</string>
    <string name="cost_cant_be_greater_than_pay_amount">Cost can\'t be grater than pay amount</string>
    <string name="customer_seat">Customer Seat</string>
    <string name="country">Country</string>
    <string name="create">Create</string>
    <string name="create_buttons">Create Buttons</string>
    <string name="createSession">Create Session</string>
    <string name="credit">Credit</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_value">Credit Value</string>
    <string name="credit_fidelity">Credit Fidelity</string>
    <string name="credit_discount">Credit Discount</string>
    <string name="credit_id">Credit ID</string>
    <string name="current_orders">Current Orders</string>
    <string name="cash_status">Cash Status</string>
    <string name="cash_management">Cash Management</string>
    <string name="cash_withdraw_amount">Cash Withdraw Amount</string>
    <string name="daily">Daily</string>
    <string name="delete">Delete</string>
    <string name="delete_">Delete %1s</string>
    <string name="delete_2">Delete %1s %2s</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete_modifier">Delete Modifier</string>
    <string name="delete_room">Delete Room</string>
    <string name="deleteProduct">Delete Product</string>
    <string name="delete_table">Delete Table</string>
    <string name="delete_this_client">Delete This Client?</string>
    <string name="deleted">Deleted</string>
    <string name="deleted_order">Deleted Order</string>
    <string name="disabled">Disabled</string>
    <string name="discount">Discount</string>
    <string name="discount_is_bigger_than_price">Discount is bigger than price</string>
    <string name="discount_name_not_accepted">Discount name not accepted</string>
    <string name="discount_value_not_valid">Discount value not valid</string>
    <string name="do_you_want_to_modify_or_cancel_discount">Do You Want To Modify Or Cancel Discount?</string>
    <string name="do_you_want_to_remove_all_discount">Do You Want To Remove All Discount?</string>
    <string name="drinks">Drinks</string>
    <string name="duplicate_vat_value">Duplicate Vat Value</string>
    <string name="deposit">Cash Deposit</string>
    <string name="database_options">Database Options</string>
    <string name="database_name">Database Name</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="email_address">E-Mail Address</string>
    <string name="email_it">E-Mail It</string>
    <string name="end_search">End Search</string>
    <string name="endSession">End Session</string>
    <string name="endTime">End Time</string>
    <string name="erase">Erase</string>
    <string name="error">Error</string>
    <string name="error_blackbox_comm">Blackbox %1$s (%2$s) is not responding</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="estimations">Estimations</string>
    <string name="euro" translatable="false">Euro</string>
    <string name="euro_all_caps" translatable="false">EURO</string>
    <string name="event_report">Event Report</string>
    <string name="existing_client">Existing Client</string>
    <string name="exchange">Cash Exchange</string>
    <string name="export_database">Export Database</string>
    <string name="favourites">Favourites</string>
    <string name="fill_admin_info_please">Fill Admin info please</string>
    <string name="fill_license_string_please">Fill license string please</string>
    <string name="fiscal">Fiscal</string>
    <string name="fiscal_code">Fiscal Code</string>
    <string name="foresty" translatable="false">Foresty</string>
    <string name="file_location" translatable="true">File Location Folder: Download</string>
    <string name="fidelity_code" translatable="true">Add Fidelitity Code</string>
    <string name="goTo">Go To</string>
    <string name="goTo_">Go To %1s</string>
    <string name="goTo_2">Go To %1s %2s</string>
    <string name="go_to_category">Go To Category</string>
    <string name="gratis_all_caps" translatable="false">GRATIS</string>
    <string name="grey_rules" translatable="false">Grey Rules</string>
    <string name="group_has_not_been_created_yet">Group has not been created yet</string>
    <string name="group_of_people">Group Of People</string>
    <string name="group_title">Group Title</string>
    <string name="groups">Groups</string>
    <string name="homage">Homage</string>
    <string name="how_do_you_want_to_pay">How Do You Want To Pay?</string>
    <string name="info_tv_subcategory">Create your subcategory buttons and set them up</string>
    <string name="info_tv_category">Create your category buttons and set them up</string>
    <string name="info_tv_maincategory">Create your main category buttons and set them up</string>
    <string name="info_tv_section">Create your section buttons and set them up</string>
    <string name="info_tv_main_modifiers">Select your modifiers and add them to product</string>
    <string name="info_tv_main_permanent_modifiers">Select your permanent modifiers and add them to product</string>
    <string name="info_tv_new_modifier">Set Modifier Group</string>
    <string name="info_tv_delete_order">Select Order Status</string>
    <string name="info_tv_vat">Preset VAT</string>
    <string name="info_tv_client_type">Client Type</string>
    <string name="info_tv_discount_type">Discount Type</string>
    <string name="select_printer">Select Printer</string>
    <string name="insert_a_valid_client_name">Insert a valid Client name</string>
    <string name="insert_a_valid_license_key">Insert A Valid License Key</string>
    <string name="insert_a_valid_quantity_value">Insert a valid quantity value</string>
    <string name="license_code">License Code</string>
    <string name="license_expiration_14_days">License Expiration: 14 days</string>
    <string name="main_menu">Main Menu</string>
    <string name="no">No</string>
    <string name="orders">Orders</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="partial">Partial</string>
    <string name="products">Products</string>
    <string name="reservations">Reservations</string>
    <string name="save_current_bill">Save Current Bill</string>
    <string name="unpaid">Unpaid</string>
    <string name="wait_im_closing_">Wait, I\'m Closing;</string>
    <string name="yes">Yes</string>
</resources>