<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1024dp"
    android:layout_height="match_parent"
    android:id="@+id/operative"
    android:background="@color/black"
    tools:context="com.example.blackbox.activities.Operative">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/topbarheader"
        android:background="@drawable/blackbox"
        android:layout_alignParentStart="true"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/rainbowbar"
        android:id="@+id/topbarline"
        android:layout_below="@id/topbarheader"
        />

    <LinearLayout
        android:id="@+id/check_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <View
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/circle_room"
            android:id="@+id/check_wi_fi"
            />

        <View
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/circle_room"
            android:id="@+id/check_blackbox"

            />
        <View
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/circle_room"
            android:id="@+id/check_printer"

            />
    </LinearLayout>

    <com.example.blackbox.graphics.CustomButton
        style="@style/ToolbarButtons"
        android:id="@+id/cashier"
        android:layout_toRightOf="@id/check_button_container"
        android:drawablePadding="2dp"
        android:text="@string/overview"
        android:paddingTop="7dp"
        android:layout_width="164dp"/>

    <View style="@style/TopBarLines"
        android:id="@+id/firstline"
        android:layout_toRightOf="@id/cashier"
        />

    <com.example.blackbox.graphics.CustomButton
        style="@style/ToolbarButtons"
        android:text="@string/clients"
        android:id="@+id/clients"
        android:layout_toRightOf="@id/firstline"
        />

    <View style="@style/TopBarLines"
        android:id="@+id/secondline"
        android:layout_toRightOf="@id/clients"
        />

    <com.example.blackbox.graphics.CustomButton
        style="@style/ToolbarButtons"
        android:text="@string/orders"
        android:id="@+id/orders"
        android:layout_toRightOf="@id/secondline"
        />

    <View style="@style/TopBarLines"
        android:id="@+id/thirdline"
        android:layout_toRightOf="@id/orders"
        />

    <com.example.blackbox.graphics.CustomButton
        style="@style/ToolbarButtons"
        android:text="@string/reservations"
        android:id="@+id/reservations"
        android:layout_toRightOf="@id/thirdline"
        />

    <View style="@style/TopBarLines"
        android:id="@+id/fourthline"
        android:layout_toRightOf="@id/reservations"
        />

    <com.example.blackbox.graphics.CustomTextView
        android:layout_height="36dp"
        android:layout_width="140dp"
        android:gravity="center_vertical"
        custom:typeface="roboto_bold"
        android:textSize="13sp"
        custom:textAllCaps="true"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:layout_toRightOf="@id/fourthline"
        android:layout_below="@id/topbarline"
        android:id="@+id/admin_button_tv"/>

    <com.example.blackbox.graphics.CustomTextView
        android:layout_height="36dp"
        android:layout_width="223dp"
        android:gravity="end|center_vertical"
        custom:typeface="roboto_bold"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:paddingEnd="10dp"
        android:layout_toRightOf="@id/admin_button_tv"
        android:layout_below="@id/topbarline"
        android:inputType="textCapWords"
        android:id="@+id/admin_username_button_tv"/>

    <com.example.blackbox.graphics.CustomButton
        style="@style/ToolbarButtons"
        android:id="@+id/admin"
        custom:typeface="roboto_bold"
        android:textSize="13sp"
        android:paddingStart="10dp"
        android:textAlignment="viewStart"
        android:layout_toRightOf="@id/fourthline"
        android:background="@color/transparent"
        android:layout_width="343dp"
        android:focusable="true"
        />


    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="651dp"
        android:orientation="horizontal"
        android:layout_below="@id/cashier"
        android:id="@+id/linear"
        android:background="@color/white"
        >

        <RelativeLayout
            android:layout_width="679dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/linear2"
            android:background="@color/white"
            >


            <FrameLayout
                android:id="@+id/operative_fragment"
                android:layout_width="679dp"
                android:layout_height="match_parent"
                />


        </RelativeLayout>
        <FrameLayout
            android:id="@+id/cash_fragment"
            android:layout_weight="0"
            android:layout_marginLeft="2dp"
            android:layout_width="343dp"
            android:layout_height="match_parent" />



    </LinearLayout>
    <!-- FOOTER -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/footerview"
        >
           <com.example.blackbox.graphics.CustomButton
                android:layout_width="210dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:text="@string/main_menu"
                android:textAlignment="center"
                android:textSize="15sp"
                custom:typeface="roboto_black"
                custom:letterSpacing="0.08"
                android:background="@drawable/open_drawer"
                android:id="@+id/showMainMenu"
                />
            <com.example.blackbox.graphics.CustomButton
                android:layout_width="210dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="14dp"
                android:textColor="@color/white"
                android:text="@string/products"
                android:textAlignment="center"
                android:textSize="15sp"
                custom:typeface="roboto_black"
                custom:letterSpacing="0.08"
                android:background="@drawable/open_drawer"
                android:id="@+id/showProducts"
                android:layout_toRightOf="@id/showMainMenu"
                />
        <com.example.blackbox.graphics.CustomButton
            android:layout_width="210dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:textColor="@color/white"
            android:text="@string/favourites"
            android:textAlignment="center"
            android:textSize="15sp"
            custom:typeface="roboto_black"
            custom:letterSpacing="0.08"
            android:background="@drawable/open_drawer"
            android:id="@+id/showFavourites"
            android:layout_toRightOf="@id/showProducts"
            />

        <com.example.blackbox.graphics.CustomButton
            android:layout_width="322dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:text="@string/cash_drawer"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="15sp"
            custom:typeface="roboto_black"
            custom:letterSpacing="0.08"
            android:background="@drawable/open_drawer"
            android:id="@+id/open_cash_drawer"/>



    </RelativeLayout>

</RelativeLayout>
