<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blackTransparent">

    <RelativeLayout
        android:layout_width="487dp"
        android:layout_height="134dp"
        android:layout_centerInParent="true"
        android:background="@drawable/view_base_background"
        android:id="@+id/save_bill_window">

        <com.example.blackbox.graphics.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="@string/save_current_bill"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            custom:typeface="franklin_gothic_demi"
            android:background="@color/blackTransparent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:id="@+id/save_bill_header"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_below="@id/save_bill_header"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp">

            <com.example.blackbox.graphics.CustomButton
                android:layout_width="216dp"
                android:layout_height="42dp"
                android:text="@string/no"
                android:id="@+id/no_button"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/popup_button_green"
                android:textColor="@color/white"
                custom:typeface="franklin_gothic_demi"
                android:textSize="15sp"
                custom:letterSpacing="0.0"
                android:textAllCaps="false"/>

            <com.example.blackbox.graphics.CustomButton
                android:layout_width="216dp"
                android:layout_height="42dp"
                android:text="@string/yes"
                android:textSize="15sp"
                android:id="@+id/yes_button"
                android:layout_toRightOf="@id/no_button"
                android:background="@drawable/popup_button_red"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                custom:letterSpacing="0.0"
                android:textColor="@color/white"
                custom:typeface="franklin_gothic_demi"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>

