<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blackTransparent">

    <RelativeLayout
        android:layout_width="487dp"
        android:layout_height="134dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/view_base_background"
        android:id="@+id/delete_window">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:id="@+id/dialog_header"
        android:layout_marginTop="5dp">
        <com.example.blackbox.graphics.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wait_im_closing_"
            custom:textAllCaps="true"
            android:textColor="@color/white"
            android:id="@+id/delete_header"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/dialog_header"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone">
        <com.example.blackbox.graphics.CustomButton
            android:layout_width="216dp"
            android:layout_height="42dp"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/popup_button_green"
            android:textColor="@color/white"
            custom:typeface="roboto_black"
            custom:letterSpacing="0.0"
            android:textAllCaps="false"/>
        <com.example.blackbox.graphics.CustomButton
            android:layout_width="216dp"
            android:layout_height="42dp"
            android:text="@string/delete"
            android:id="@+id/delete_button"
            android:layout_toRightOf="@id/cancel_button"
            android:background="@drawable/popup_button_red"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            custom:letterSpacing="0.0"
            android:textColor="@color/white"
            custom:typeface="roboto_black"/>
    </RelativeLayout>
        <com.example.blackbox.graphics.CustomButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/hidden_button"/>

    </RelativeLayout>
</RelativeLayout>
